# qjtrader-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart_market_data.py  quickstart_orders.py  strategy_meanreversion.py
scripts/: smoke_published.py
src/qjtrader/: __init__.py  _cli.py  _stream.py  access.py  auth.py  autotools.py  availability.py  backtest.py  calendar.py  client.py  connect.py  credentials.py  errors.py  intents.py  l2backtest.py  local_runs.py  market_data.py  orders.py  rest.py  run.py  runner.py  runner_service.py  scaffold.py  strategy.py  universe.py
tests/: test_access.py  test_auth.py  test_autotools.py  test_availability.py  test_calendar.py  test_connect.py  test_credentials_file.py  test_intents.py  test_l2backtest.py  test_local_runs.py  test_prove.py  test_rest.py  test_run_bars.py  test_runner_service.py  test_strategy.py  test_stream.py  test_top_of_book.py  test_universe_scaffold.py
