[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qjtrader"
dynamic = ["version"]
description = "Official Python client for the QJ Trader AI Trading APIs — Canadian market data and order entry."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "QJ Trader" }]
keywords = ["trading", "market-data", "order-entry", "canada", "finance", "algotrading", "tsx", "montreal-exchange"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []  # stdlib only

[project.urls]
Homepage = "https://qjtrader.ai"
Documentation = "https://docs.qjtrader.ai/docs/ai"
Console = "https://console.qjtrader.ai"
Source = "https://github.com/QJTrader/qjtrader-python"
Issues = "https://github.com/QJTrader/qjtrader-python/issues"

[project.scripts]
qjtrader = "qjtrader._cli:main"
qjtrader-runner = "qjtrader.runner_service:main"

[tool.hatch.version]
path = "src/qjtrader/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/qjtrader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
